@@ -2,6 +2,7 @@ package ca.on.oicr.pinery.client;
 
 import static org.junit.Assert.assertEquals;
 import static org.junit.Assert.assertNotNull;
+import static org.junit.Assert.assertThrows;
 import static org.mockito.Mockito.doReturn;
 import static org.mockito.Mockito.doThrow;
 import static org.mockito.Mockito.mock;
@@ -11,13 +12,9 @@ import ca.on.oicr.ws.dto.InstrumentDto;
 import java.util.ArrayList;
 import java.util.List;
 import org.junit.Before;
-import org.junit.Rule;
 import org.junit.Test;
-import org.junit.rules.ExpectedException;
 
 public class InstrumentClientTest {
-
-  @Rule public final ExpectedException exception = ExpectedException.none();
 
   private PineryClient pineryClientMock;
   private InstrumentClient client;
@@ -41,8 +38,8 @@ public class InstrumentClientTest {
 
     List<InstrumentDto> results = client.all();
     assertEquals(2, results.size());
-    assertEquals(new Integer(111), results.get(0).getId());
-    assertEquals(new Integer(222), results.get(1).getId());
+    assertEquals(Integer.valueOf(111), results.get(0).getId());
+    assertEquals(Integer.valueOf(222), results.get(1).getId());
   }
 
   @Test
@@ -57,8 +54,7 @@ public class InstrumentClientTest {
   public void testGetAllBadStatus() throws HttpResponseException {
     doThrow(new HttpResponseException()).when(client).getResourceList("instruments");
 
-    exception.expect(HttpResponseException.class);
-    client.all();
+    assertThrows(HttpResponseException.class, () -> client.all());
   }
 
   @Test
@@ -74,8 +70,8 @@ public class InstrumentClientTest {
 
     List<InstrumentDto> results = client.byModel(5);
     assertEquals(2, results.size());
-    assertEquals(new Integer(111), results.get(0).getId());
-    assertEquals(new Integer(222), results.get(1).getId());
+    assertEquals(Integer.valueOf(111), results.get(0).getId());
+    assertEquals(Integer.valueOf(222), results.get(1).getId());
   }
 
   @Test
@@ -94,8 +90,7 @@ public class InstrumentClientTest {
         .when(client)
         .getResourceList("instrumentmodel/5/instruments");
 
-    exception.expect(HttpResponseException.class);
-    client.byModel(5);
+    assertThrows(HttpResponseException.class, () -> client.byModel(5));
   }
 
   @Test
@@ -105,14 +100,13 @@ public class InstrumentClientTest {
     doReturn(in).when(client).getResource("instrument/123");
 
     InstrumentDto result = client.byId(123);
-    assertEquals(new Integer(123), result.getId());
+    assertEquals(Integer.valueOf(123), result.getId());
   }
 
   @Test
   public void testGetByIdBadStatus() throws HttpResponseException {
     doThrow(new HttpResponseException()).when(client).getResource("instrument/123");
 
-    exception.expect(HttpResponseException.class);
-    client.byId(123);
+    assertThrows(HttpResponseException.class, () -> client.byId(123));
   }
 }
